RESOLVED FIXED102897
Yarr JIT isn't big endian compatible
https://bugs.webkit.org/show_bug.cgi?id=102897
Summary Yarr JIT isn't big endian compatible
Tobias Netzel
Reported 2012-11-21 01:15:36 PST
generatePatternCharacterOnce doesn't work on big endian platforms.
Attachments
make generatePatternCharacterOnce do it right on big endian platforms (2.44 KB, patch)
2012-11-21 01:27 PST, Tobias Netzel
no flags
Tobias Netzel
Comment 1 2012-11-21 01:27:13 PST
Created attachment 175371 [details] make generatePatternCharacterOnce do it right on big endian platforms
Tobias Netzel
Comment 2 2013-01-17 01:50:30 PST
Is there anything I can do in order to get some feedback by someone?
WebKit Review Bot
Comment 3 2013-01-22 10:36:22 PST
Comment on attachment 175371 [details] make generatePatternCharacterOnce do it right on big endian platforms Clearing flags on attachment: 175371 Committed r140438: <http://trac.webkit.org/changeset/140438>
WebKit Review Bot
Comment 4 2013-01-22 10:36:25 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.